vlib/v/checker/tests/assign_expr_type_err_h.out
vlib/v/checker/tests/assign_expr_type_err_h.vv:3:9: error: invalid right operand: string += bool
    1 | fn main() {
    2 |     mut foo := 'hello'
    3 |     foo += false
      |            ~~~~~
    4 |     _ = foo
    5 | }
vlib/v/checker/tests/assign_expr_type_err_h.vv:3:9: error: cannot assign to `foo`: expected `string`, not `bool`
    1 | fn main() {
    2 |     mut foo := 'hello'
    3 |     foo += false
      |            ~~~~~
    4 |     _ = foo
    5 | }
